# diskghost

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/diskghost-cli/: Cargo.toml
crates/diskghost-cli/src/: main.rs
crates/diskghost-cli/tests/: cli.rs
crates/diskghost-core/: Cargo.toml
crates/diskghost-core/benches/: scan.rs
crates/diskghost-core/src/: lib.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/ui/: app.js  index.html  styles.css
