[package]
name = "diskghost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Diskghost — fast disk usage & duplicate finder."

[[bin]]
name = "diskghost"
path = "src/main.rs"

[dependencies]
diskghost-core = { path = "../diskghost-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
